--- a/style.css
+++ b/style.css
@@ -8,29 +8,79 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: 50px 50px 10px 50px;
+    height: 100vh;
+    background-color: #d9e4f5;
+    background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 p {
     font-size: 15px;
-}
-
-body > p {
-    max-width: 60vw;
-    text-align: center;
+    color: hsl(229, 6%, 66%);
 }
 
 h1 {
     margin: 0;
     font-size: 24px;
     font-weight: 600;
+    color: hsl(234, 12%, 34%);
 }
 
 h2 {
     margin: 0;
     font-weight: 400;
+    color: hsl(229, 6%, 66%);
+}
+
+h3 {
+    margin: 0;
+    font-size: 16px;
+    color: hsl(234, 12%, 34%);
+}
+
+.main_container {
+    margin: 50px;
+    padding: 30px 40px;
+    background-color: hsl(0, 0%, 98%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_container > p {
+    max-width: 60%;
+    text-align: center;
+}
+
+.tile {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    margin: 4vh 2vw;
+    background-color: white;
+    border-radius: 3%;
+    border-top: solid;
+    box-shadow: 0 5px 15px 1px hsl(229, 6%, 66%);
+}
+
+.supervisor {
+    border-color: hsl(180, 62%, 55%);
+}
+
+.team_builder {
+    border-color: hsl(0, 78%, 62%);
+}
+
+.karma {
+    border-color: hsl(34, 97%, 64%);
+}
+
+.calculator {
+    border-color: hsl(212, 86%, 64%);
 }
 
 .attribution {
