--- a/style.css
+++ b/style.css
@@ -42,8 +42,10 @@ h3 {
 }
 
 .main_container {
-    margin: 50px;
-    padding: 30px 40px;
+    margin: 100px;
+    padding: 2vw;
+    width: 60vw;
+    height: max-content;
     background-color: hsl(0, 0%, 98%);
     display: flex;
     flex-direction: column;
@@ -56,31 +58,50 @@ h3 {
     text-align: center;
 }
 
+.tiles_container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas: 
+        ". team_builder ."
+        "supervisor team_builder calculator"
+        "supervisor karma calculator"
+        ". karma .";
+}
+
 .tile {
     display: flex;
     flex-direction: column;
-    padding: 15px;
-    margin: 4vh 2vw;
+    padding: 20px;
+    margin: 1vw;
     background-color: white;
     border-radius: 3%;
     border-top: solid;
     box-shadow: 0 5px 15px 1px hsl(229, 6%, 66%);
 }
 
+.tile svg {
+    align-self: flex-end;
+}
+
 .supervisor {
     border-color: hsl(180, 62%, 55%);
+    grid-area: supervisor;
 }
 
 .team_builder {
     border-color: hsl(0, 78%, 62%);
+    grid-area: team_builder;
 }
 
 .karma {
     border-color: hsl(34, 97%, 64%);
+    grid-area: karma;
 }
 
 .calculator {
     border-color: hsl(212, 86%, 64%);
+    grid-area: calculator;
 }
 
 .attribution {
