Added basic mobile device responsiveness. Added a header div for titles. Changed the grid tamplate for mobiles. Changed font size and margind for mobiles.

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h3 {
     font-size: 16px;
     color: hsl(234, 12%, 34%);
 }
-
+                                                                           
 .main_container {
     margin: 100px;
     padding: 2vw;
@@ -53,9 +53,16 @@ h3 {
     align-items: center;
 }
 
-.main_container > p {
-    max-width: 60%;
+.header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
+}
+
+.header > p {
+    max-width: 60%;
 }
 
 .tiles_container {
@@ -106,4 +113,43 @@ h3 {
 
 .attribution {
     font-size: 12px;
+}
+
+@media only screen and (max-width: 375px) {
+
+    body {
+        margin: 0;
+    }
+
+    .main_container {
+        margin: 0;
+        padding: 4vw;
+        width: 100vw;
+    }
+
+    .header {
+        padding: 10vw 0;
+    }
+    
+    .header > p {
+        max-width: 90%;
+    }
+
+    .tiles_container {
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-areas: 
+            "supervisor"
+            "team_builder"
+            "karma"
+            "calculator";
+    }
+
+    .tile {
+        margin: 2vw 1vw;
+    }
+
+    h3 {
+        font-size: 20px
+    }
 }
